<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeTricker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sample_time">00:00</string>
    <string name="start">start</string>
    <string name="task_name">Task Name</string>
    <string name="date_select">Sau,Jul 5</string>
    <string name="description">Description</string>

</resources>
